use react-native-sensitive-storage

--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -66,6 +66,7 @@
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^3.0.6",
     "react-native-screens": "^2.9.0",
+    "react-native-sensitive-info": "^6.0.0-alpha.6",
     "react-native-snap-carousel": "^4.0.0-beta.5",
     "react-native-spinkit": "^1.5.0",
     "react-native-status-bar-height": "^2.4.0",
